初步完成招标台账和招标进度表的模型设计

--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -579,6 +579,8 @@
       <DependentUpon>201807140054525_EditDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AccountProject.cs" />
+    <Compile Include="Models\AccountProjectChild.cs" />
     <Compile Include="Models\AuthorityInfo.cs" />
     <Compile Include="Models\DB.cs" />
     <Compile Include="Global.asax.cs">
@@ -587,8 +589,12 @@
     <Compile Include="Models\DeptInfo.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\NoticeInfo.cs" />
+    <Compile Include="Models\ProgressProject.cs" />
     <Compile Include="Models\RoleAuthority.cs" />
     <Compile Include="Models\RoleInfo.cs" />
+    <Compile Include="Models\AccountMaterial.cs" />
+    <Compile Include="Models\AccountMaterialChild.cs" />
+    <Compile Include="Models\ProgressMaterial.cs" />
     <Compile Include="Models\UserDept.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\UserRole.cs" />
