--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -573,10 +573,43 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NoticeInfoController.cs" />
     <Compile Include="Controllers\RoleInfoController.cs" />
+    <Compile Include="Controllers\SampleDelegationController.cs" />
     <Compile Include="Controllers\UserInfoController.cs" />
     <Compile Include="Migrations\201807140054525_EditDB.cs" />
     <Compile Include="Migrations\201807140054525_EditDB.Designer.cs">
       <DependentUpon>201807140054525_EditDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807240525454_edit.cs" />
+    <Compile Include="Migrations\201807240525454_edit.Designer.cs">
+      <DependentUpon>201807240525454_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807240553543_edit1.cs" />
+    <Compile Include="Migrations\201807240553543_edit1.Designer.cs">
+      <DependentUpon>201807240553543_edit1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807240718494_edit2.cs" />
+    <Compile Include="Migrations\201807240718494_edit2.Designer.cs">
+      <DependentUpon>201807240718494_edit2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807250328335_edit3.cs" />
+    <Compile Include="Migrations\201807250328335_edit3.Designer.cs">
+      <DependentUpon>201807250328335_edit3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807250504260_edit4.cs" />
+    <Compile Include="Migrations\201807250504260_edit4.Designer.cs">
+      <DependentUpon>201807250504260_edit4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807250523340_edit5.cs" />
+    <Compile Include="Migrations\201807250523340_edit5.Designer.cs">
+      <DependentUpon>201807250523340_edit5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807260145508_edit6.cs" />
+    <Compile Include="Migrations\201807260145508_edit6.Designer.cs">
+      <DependentUpon>201807260145508_edit6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807260523156_edit7.cs" />
+    <Compile Include="Migrations\201807260523156_edit7.Designer.cs">
+      <DependentUpon>201807260523156_edit7.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountProject.cs" />
@@ -595,6 +628,8 @@
     <Compile Include="Models\AccountMaterial.cs" />
     <Compile Include="Models\AccountMaterialChild.cs" />
     <Compile Include="Models\ProgressMaterial.cs" />
+    <Compile Include="Models\SampleDelegation.cs" />
+    <Compile Include="Models\TechnicSpecificationApprove.cs" />
     <Compile Include="Models\UserDept.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\UserRole.cs" />
@@ -612,6 +647,10 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.11.3.min.map" />
+    <Content Include="Views\SampleDelegation\Search.cshtml" />
+    <Content Include="Views\SampleDelegation\Input.cshtml" />
+    <Content Include="Views\SampleDelegation\SearchInfo.cshtml" />
+    <Content Include="Views\SampleDelegation\TableInfo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -621,11 +660,36 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="FileUpload\" />
     <Folder Include="ueditor\net\upload\file\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201807140054525_EditDB.resx">
       <DependentUpon>201807140054525_EditDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807240525454_edit.resx">
+      <DependentUpon>201807240525454_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807240553543_edit1.resx">
+      <DependentUpon>201807240553543_edit1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807240718494_edit2.resx">
+      <DependentUpon>201807240718494_edit2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807250328335_edit3.resx">
+      <DependentUpon>201807250328335_edit3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807250504260_edit4.resx">
+      <DependentUpon>201807250504260_edit4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807250523340_edit5.resx">
+      <DependentUpon>201807250523340_edit5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807260145508_edit6.resx">
+      <DependentUpon>201807260145508_edit6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807260523156_edit7.resx">
+      <DependentUpon>201807260523156_edit7.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
