完成招标进度搜索功能，删除功能，招标进度工程表格显示

--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -679,6 +679,7 @@
     <Content Include="Views\ProgressInfo\TableInfoMaterial.cshtml" />
     <Content Include="Views\ProgressInfo\SearchInfoProject.cshtml" />
     <Content Include="Views\ProgressInfo\TableInfoProject.cshtml" />
+    <Content Include="Views\ProgressInfo\ModalMaterial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
