--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -369,6 +369,7 @@
     <Content Include="bootstrap-table-dist\locale\bootstrap-table-zh-TW.min.js" />
     <Content Include="Content\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\bootstrap-table-fixed-columns.css" />
+    <Content Include="Content\bootstrap-table-fixed-columns2.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -411,6 +412,7 @@
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.zh-CN.js" />
     <Content Include="Scripts\bootstrap-table-fixed-columns.js" />
+    <Content Include="Scripts\bootstrap-table-fixed-columns2.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Ewin.js" />
@@ -571,6 +573,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AuthorityInfoController.cs" />
     <Compile Include="Controllers\DeptController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -578,6 +581,7 @@
     <Compile Include="Controllers\ProgressInfoController.cs" />
     <Compile Include="Controllers\RoleInfoController.cs" />
     <Compile Include="Controllers\SampleDelegationController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\UserInfoController.cs" />
     <Compile Include="Migrations\201807140054525_EditDB.cs" />
     <Compile Include="Migrations\201807140054525_EditDB.Designer.cs">
@@ -631,6 +635,10 @@
     <Compile Include="Migrations\201808070019417_edit11.Designer.cs">
       <DependentUpon>201808070019417_edit11.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808150042129_edit12.cs" />
+    <Compile Include="Migrations\201808150042129_edit12.Designer.cs">
+      <DependentUpon>201808150042129_edit12.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountProject.cs" />
     <Compile Include="Models\AccountProjectChild.cs" />
@@ -680,6 +688,13 @@
     <Content Include="Views\ProgressInfo\SearchInfoProject.cshtml" />
     <Content Include="Views\ProgressInfo\TableInfoProject.cshtml" />
     <Content Include="Views\ProgressInfo\ModalMaterial.cshtml" />
+    <Content Include="Views\Test\FixColumnBsTable.cshtml" />
+    <Content Include="Views\Account\Material.cshtml" />
+    <Content Include="Views\Account\TableInfoMaterial.cshtml" />
+    <Content Include="Views\Account\Project.cshtml" />
+    <Content Include="Views\Account\Service.cshtml" />
+    <Content Include="Views\Account\TableInfoProject.cshtml" />
+    <Content Include="Views\Account\SearchInfoProject.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -731,6 +746,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808070019417_edit11.resx">
       <DependentUpon>201808070019417_edit11.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808150042129_edit12.resx">
+      <DependentUpon>201808150042129_edit12.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
