--- a/TenderInfo/Web.config
+++ b/TenderInfo/Web.config
@@ -22,7 +22,7 @@
       </forms>
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" requestValidationMode="2.0" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
