--- a/TenderInfo/packages.config
+++ b/TenderInfo/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net461" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net461" />
   <package id="jQuery" version="1.9.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.4" targetFramework="net461" />
@@ -20,8 +23,11 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
