--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -759,6 +759,10 @@
     <Compile Include="Migrations\201810170141078_edit37.Designer.cs">
       <DependentUpon>201810170141078_edit37.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810180125589_edit38.cs" />
+    <Compile Include="Migrations\201810180125589_edit38.Designer.cs">
+      <DependentUpon>201810180125589_edit38.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountChild.cs" />
@@ -967,6 +971,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810170141078_edit37.resx">
       <DependentUpon>201810170141078_edit37.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810180125589_edit38.resx">
+      <DependentUpon>201810180125589_edit38.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
