--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -841,6 +841,8 @@
     <Content Include="Views\TechnicSpecifiction\TableInfoComprehensive.cshtml" />
     <Content Include="Views\TechnicSpecifiction\SearchInfoComprehensive.cshtml" />
     <Content Include="Views\TechnicSpecifiction\ApproveComprehensive.cshtml" />
+    <Content Include="Views\Home\MeetingRoomPlan.cshtml" />
+    <Content Include="Views\TechnicSpecifiction\Search.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -975,17 +977,6 @@
     <EmbeddedResource Include="Migrations\201810180125589_edit38.resx">
       <DependentUpon>201810180125589_edit38.cs</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="Microsoft.Office.Core">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>5</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
