--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -82,6 +82,7 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -400,6 +401,7 @@
     <Content Include="Content\metroStyle\img\metro.gif" />
     <Content Include="Content\metroStyle\img\metro.png" />
     <Content Include="Content\metroStyle\metroStyle.css" />
+    <Content Include="Content\signin.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Content\zTreeStyle\img\diy\1_close.png" />
     <Content Include="Content\zTreeStyle\img\diy\1_open.png" />
@@ -843,6 +845,7 @@
     <Content Include="Views\TechnicSpecifiction\ApproveComprehensive.cshtml" />
     <Content Include="Views\Home\MeetingRoomPlan.cshtml" />
     <Content Include="Views\TechnicSpecifiction\Search.cshtml" />
+    <Content Include="Views\Home\LoginFormAD.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
